@@ -1,23 +1,23 @@
 package com.votify.handlers;
 
-import com.votify.enums.SortSession;
-import com.votify.exceptions.*;
-import com.votify.helpers.UtilHelper;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
+import com.fasterxml.jackson.databind.exc.InvalidFormatException;
+import com.votify.exceptions.*;
+import com.votify.helpers.UtilHelper;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
-
-import com.fasterxml.jackson.databind.exc.InvalidFormatException;
+import org.springframework.web.servlet.resource.NoResourceFoundException;
 import com.fasterxml.jackson.databind.exc.UnrecognizedPropertyException;
 import com.votify.exceptions.ConflictException;
 import com.votify.exceptions.UserNotFoundException;
 import com.votify.exceptions.ValidationErrorException;
 import com.votify.models.CustomErrorResponse;
 
+import java.time.LocalDateTime;
 import java.util.*;
 
 import org.slf4j.Logger;
@@ -59,20 +59,24 @@ public class GlobalExceptionHandler {
 
         String message = "Invalid request body format";
 
-        if (ex.getCause() instanceof UnrecognizedPropertyException) {
-            UnrecognizedPropertyException unrecognizedEx = (UnrecognizedPropertyException) ex.getCause();
+        if (ex.getCause() instanceof UnrecognizedPropertyException unrecognizedEx) {
             String propertyName = unrecognizedEx.getPropertyName();
             message = "Unknown field: '" + propertyName + "' is not recognized";
             errors.add("Property '" + propertyName + "' is not allowed");
-        } else if (ex.getCause() instanceof InvalidFormatException) {
-            InvalidFormatException invalidFormatEx = (InvalidFormatException) ex.getCause();
-            message = "Invalid format for field: " + invalidFormatEx.getPath().get(0).getFieldName();
-            errors.add("Invalid value format for field '" + invalidFormatEx.getPath().get(0).getFieldName() + "'");
+        } else if (ex.getCause() instanceof InvalidFormatException invalidFormatEx) {
+            message = "Invalid format for field: " + invalidFormatEx.getPath().getFirst().getFieldName();
+            errors.add("Invalid value format for field '" + invalidFormatEx.getPath().getFirst().getFieldName() + "'");
+        } else if (ex.getCause() instanceof InvalidFormatException formatException) {
+            if (formatException.getTargetType().equals(LocalDateTime.class)) {
+                message = "Invalid date format";
+            }
         } else {
             errors.add("Invalid JSON format");
         }
 
-        logger.debug("JSON parsing error", ex);
+        if (logger.isTraceEnabled()) {
+            logger.trace("JSON parsing error", ex);
+        }
 
         response.put("message", message);
         response.put("errors", errors);
@@ -85,17 +89,18 @@ public class GlobalExceptionHandler {
             MethodArgumentNotValidException ex) {
         Map<String, Object> response = new HashMap<>();
         List<String> errors = new ArrayList<>();
-        
-        ex.getBindingResult().getFieldErrors().forEach(error -> 
+
+        ex.getBindingResult().getFieldErrors().forEach(error ->
             errors.add(error.getField() + ": " + error.getDefaultMessage())
         );
-        
+
         response.put("message", "Validation error");
         response.put("errors", errors);
         return new ResponseEntity<>(response, HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler(MethodArgumentTypeMismatchException.class)
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
     public ResponseEntity<CustomErrorResponse> handleMethodArgumentTypeMismatchException(MethodArgumentTypeMismatchException ex) {
         String message = ex.getMessage();
         if (ex.getName().equals("direction")) {
@@ -129,10 +134,21 @@ public class GlobalExceptionHandler {
         return new ResponseEntity<>(new CustomErrorResponse(ex.getMessage()), HttpStatus.NOT_FOUND);
     }
 
+    @ExceptionHandler(AgendaNotFoundException.class)
+    @ResponseStatus(HttpStatus.NOT_FOUND)
+    public ResponseEntity<CustomErrorResponse> handleAgendaNotFound(AgendaNotFoundException ex) {
+        return new ResponseEntity<>(new CustomErrorResponse(ex.getMessage()), HttpStatus.NOT_FOUND);
+    }
+
     @ExceptionHandler(Exception.class)
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
     public ResponseEntity<CustomErrorResponse> handlerGenericException(Exception ex) {
-        logger.error("Unhandled exception", ex);
+        if (!(ex instanceof NoResourceFoundException)) {
+            logger.error("Unhandled exception: {}", ex.getMessage());
+            if (logger.isDebugEnabled()) {
+                logger.debug("Exception details:", ex);
+            }
+        }
         return new ResponseEntity<>(new CustomErrorResponse("An unknown error occurred"),
             HttpStatus.INTERNAL_SERVER_ERROR);
     }
